// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooEntityComponent Rendering Should render 1`] = `
<yoo-entity
  class="hydrated"
  data-yoo-entity-host=""
>
  
  
</yoo-entity>
`;

exports[`YooEntityComponent Rendering Should render with item 1`] = `
<yoo-entity
  class="hydrated"
  data-yoo-entity-host=""
>
  
  <yoo-card
    data-yoo-entity=""
    heading="Title"
  />
</yoo-entity>
`;
